# stock-database

./: .gitignore  README.md  config.yaml  pyproject.toml
database/: database_manager.py  schema.sql
scripts/: collect_price_data.py  generate_calendar_features.py  generate_outcomes.py  generate_technical_indicators.py  generate_technical_trade_signals.py  initialize_database.py
src/: outcomes.py  technical_indicators.py  technical_trade_signals.py
src/stock_database.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
temporary_scripts/: debug_date_type.py  debug_donchian_signals.py  debug_macd.py  debug_macd_summary.py  debug_psar.py  folders.py  replace_with_screener_symbols.py
