[project]
name = "stock-database"
version = "0.1.0"
description = "Database to store OCHLV data, moving average calculations, lags, technical indicators, and signals"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Ken Moore", email = "ken.r.moore@gmail.com"}
]

dependencies = [
    "pandas>=1.3.0",
    "numpy>=1.23.0",
    "ta>=0.10.2",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
    "requests>=2.25.1",
    "urllib3>=1.26.5",
    "yfinance>=0.2.54",
    "pandas_ta>=0.3.14b0",
    "exchange_calendars>=4.10.1"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
include = '\.pyi?$'

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
